--- a/retail/retail-java-applications/build.gradle
+++ b/retail/retail-java-applications/build.gradle
@@ -21,6 +21,7 @@ plugins {
     id 'java'
     id "com.diffplug.gradle.spotless" version "4.5.1"
     id "com.github.spotbugs" version "4.4.4"
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 // All common configuration
@@ -30,14 +31,52 @@ allprojects {
     version '0.9.0'
 
     ext {
-        beamVersion = '2.28.0'
+        beamVersion = '2.39.0'
         autoValueVersion = '1.6.3'
     }
 
     repositories {
         mavenCentral()
+        maven {
+            url "https://packages.confluent.io/maven"
+        }
     }
+    apply plugin: 'java'
+    dependencies {
+        // Work around for dependency issue
+        implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+        // Beam Dependencies
+        implementation group: 'org.apache.beam', name: 'beam-sdks-java-core', version: "${beamVersion}"
+        implementation group: 'org.apache.beam', name: 'beam-runners-google-cloud-dataflow-java', version: "${beamVersion}"
+        implementation group: 'org.apache.beam', name: 'beam-runners-direct-java', version: "${beamVersion}"
+        implementation group: 'org.apache.beam', name: 'beam-sdks-java-extensions-sql', version: "${beamVersion}"
+        implementation group: 'com.google.cloud.bigtable', name: 'bigtable-hbase-beam', version: '1.11.0'
+        // https://mvnrepository.com/artifact/org.apache.beam/beam-sdks-java-core
+        implementation 'com.google.code.gson:gson:2.9.0'
+        // BigQuery direct client
+        implementation 'com.google.cloud:google-cloud-bigquery:1.88.0'
+        // -- AutoValue
+        annotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
+        implementation "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
+
+        // Enable code formatting
+        implementation 'com.google.googlejavaformat:google-java-format:1.7'
+
+        // Test
+        implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.7'
+        // Test
+        implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.7'
+        testImplementation group: 'junit', name: 'junit', version: '4.12'
+        // BigQuery direct client
+        testImplementation 'com.google.cloud:google-cloud-bigquery:1.88.0'
+        // Testing tools
+        testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+        testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '29.0-jre'
+    }
+
 }
+
+
 
 // Enable code formatting
 spotless {
