--- a/retail/retail-java-applications/data-engineering-dept/business-logic/build.gradle
+++ b/retail/retail-java-applications/data-engineering-dept/business-logic/build.gradle
@@ -48,29 +48,29 @@ test {
 }
 
 dependencies {
-    compile project(':data-engineering-dept:data-objects')
+    implementation project(':data-engineering-dept:data-objects')
 
     // Work around for dependency issue
-    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+    //implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
 
     // Beam Dependencies
-    compile group: 'org.apache.beam', name: 'beam-sdks-java-core', version: "${beamVersion}"
-    compile group: 'org.apache.beam', name: 'beam-runners-google-cloud-dataflow-java', version: "${beamVersion}"
-    compile group: 'org.apache.beam', name: 'beam-runners-direct-java', version: "${beamVersion}"
-    compile group: 'org.apache.beam', name: 'beam-sdks-java-extensions-sql', version:  "${beamVersion}"
-    compile group: 'com.google.cloud.bigtable', name: 'bigtable-hbase-beam', version :'1.11.0'
+    //implementation group: 'org.apache.beam', name: 'beam-sdks-java-core', version: "${beamVersion}"
+    //implementation group: 'org.apache.beam', name: 'beam-runners-google-cloud-dataflow-java', version: "${beamVersion}"
+    //implementation group: 'org.apache.beam', name: 'beam-runners-direct-java', version: "${beamVersion}"
+    //implementation group: 'org.apache.beam', name: 'beam-sdks-java-extensions-sql', version:  "${beamVersion}"
+    //implementation group: 'com.google.cloud.bigtable', name: 'bigtable-hbase-beam', version :'1.11.0'
 
     // AutoValue
-    annotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
-    compile             "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
+    //annotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
+    //implementation             "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
 
     // BigQuery direct client
-    compile 'com.google.cloud:google-cloud-bigquery:1.88.0'
+    //implementation 'com.google.cloud:google-cloud-bigquery:1.88.0'
 
     // Testing tools
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '29.0-jre'
+    //testImplementation group: 'junit', name: 'junit', version: '4.12'
+    //testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    //testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '29.0-jre'
 
 
 }
